- UI update fix
- Side panel, Forces scrollbar to always be visible
- email sending delay decreased to overcome the CPU shutdown
- Initial stripe color state updated

--- a/styles.css
+++ b/styles.css
@@ -161,6 +161,7 @@ body {
     position: sticky;
     top: 0;
     padding-top: 91px;
+    overflow-y: scroll; /* Forces scrollbar to always be visible */
 }
 
 .panel-header {
